--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "vitest --environment jsdom"
   },
   "devDependencies": {
+    "@tweakpane/core": "^1.1.0",
     "@types/jsdom": "^20.0.0",
     "jsdom": "^20.0.0",
     "typescript": "4.6.4",
@@ -23,6 +24,7 @@
     "vitest": "^0.23.1"
   },
   "dependencies": {
-    "phaser": "3.55.2"
+    "phaser": "3.55.2",
+    "tweakpane": "^3.1.0"
   }
 }
