--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "vitest": "^0.23.1"
   },
   "dependencies": {
-    "phaser": "3.55.2",
+    "phaser": "3.60.0-beta.10",
     "tweakpane": "^3.1.0"
   }
 }
